# fastapi-project

./: alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 4cc98cebef0e_user_access_token_tables.py
app/: config.py  main.py
app/db/: __init__.py
app/db/models/auth/: __init__.py  access_tokens.py  user.py
