[project]
name = "auth"
version = "0.1.0"
description = "Auth microservice"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.15.2",
    "asyncpg>=0.30.0",
    "fastapi[all]>=0.115.12",
    "psycopg2>=2.9.10",
    "pydantic>=2.11.4",
    "pytest>=8.3.5",
    "python-dotenv>=1.1.0",
    "sqlalchemy[asyncio]>=2.0.40",
    "uvicorn>=0.34.2",
]
